add add-item form

--- a/bibliotech/templates/bibliotech/librarian_control_panel.html
+++ b/bibliotech/templates/bibliotech/librarian_control_panel.html
@@ -61,8 +61,8 @@
 					<div class="card-content">
 						<div class="block content">
 							<ul>
-								<li><a href={% url 'return-item' %}>Return an item</a></li>
-								<li><a>Add a new item</a></li>
+								<li><a href="{% url 'return-item' %}">Return an item</a></li>
+								<li><a href="{% url 'add-item' %}">Add a new item</a></li>
 								<li><a>Add a new holding</a></li>
 							</ul>
 						</div>
