--- a/bibliotech/templates/bibliotech/librarian_control_panel.html
+++ b/bibliotech/templates/bibliotech/librarian_control_panel.html
@@ -60,10 +60,20 @@
 					</div>
 					<div class="card-content">
 						<div class="block content">
+							{% if messages  %}
+							<ul>
+								{% for m in messages %}
+								<li class="notification">
+									{{ m }}
+								</li>
+								{% endfor %}
+							</ul>
+							{% endif %}
+							<p>
 							<ul>
 								<li><a href="{% url 'return-item' %}">Return an item</a></li>
 								<li><a href="{% url 'add-item' %}">Add a new item</a></li>
-								<li><a>Add a new holding</a></li>
+								<li><a href="{% url 'add-holding' %}">Add a new holding</a></li>
 							</ul>
 						</div>
 					</div>
