--- a/bibliotech/templates/bibliotech/librarian_control_panel.html
+++ b/bibliotech/templates/bibliotech/librarian_control_panel.html
@@ -3,6 +3,39 @@
 {% block content %}
 <div class="tile is-ancestor">
 	<div class="tile">
+		
+		<div class="tile is-parent">
+			<div class="tile is-child is-vertical">
+				<div class="card" style="width: 100%">
+					<div class="card-header has-background-dark">
+						<h1 class="card-header-title has-text-light">Actions</h1>
+					</div>
+					<div class="card-content">
+						<div class="block content">
+							{% if messages  %}
+							<ul>
+								{% for m in messages %}
+								<li class="notification">
+									{{ m }}
+								</li>
+								{% endfor %}
+							</ul>
+							{% endif %}
+							<h3>Manage Checkouts</h3>
+							<ul>
+								<li><a href="{% url 'return-item' %}">Return an item</a></li>
+							</ul>
+							<h3>Manage Items</h3>
+							<ul>
+								<li><a href="{% url 'add-item' %}">Add a new item</a></li>
+								<li><a href="{% url 'add-holding' %}">Add a new holding</a></li>
+								<li><a>Update an item</a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 
 		<div class="tile is-parent is-7">
 			<div class="card" style="width: 100%">
@@ -48,35 +81,6 @@
 					{% else %}
 						No pending checkouts!
 					{% endif %}
-				</div>
-			</div>
-		</div>
-
-		<div class="tile is-parent">
-			<div class="tile is-child is-vertical">
-				<div class="card" style="width: 100%">
-					<div class="card-header has-background-dark">
-						<h1 class="card-header-title has-text-light">Actions</h1>
-					</div>
-					<div class="card-content">
-						<div class="block content">
-							{% if messages  %}
-							<ul>
-								{% for m in messages %}
-								<li class="notification">
-									{{ m }}
-								</li>
-								{% endfor %}
-							</ul>
-							{% endif %}
-							<p>
-							<ul>
-								<li><a href="{% url 'return-item' %}">Return an item</a></li>
-								<li><a href="{% url 'add-item' %}">Add a new item</a></li>
-								<li><a href="{% url 'add-holding' %}">Add a new holding</a></li>
-							</ul>
-						</div>
-					</div>
 				</div>
 			</div>
 		</div>
