Add view and tests for context data

--- a/bibliotech/templates/bibliotech/librarian_control_panel.html
+++ b/bibliotech/templates/bibliotech/librarian_control_panel.html
@@ -29,7 +29,7 @@
 							<ul>
 								<li><a href="{% url 'add-item' %}">Add a new item</a></li>
 								<li><a href="{% url 'add-holding' %}">Add a new holding</a></li>
-								<li><a>Update an item</a></li>
+								<li><a href="{% url 'master-inventory' %}">Update an item</a></li>
 							</ul>
 						</div>
 					</div>
