--- a/bibliotech/templates/bibliotech/base.html
+++ b/bibliotech/templates/bibliotech/base.html
@@ -39,9 +39,17 @@
 				</div>
 			</div>
 		</nav>
-		<div class="container mt-6">
-		{% block content %}
-		{% endblock %}
+		<div class="container pt-6" style="height: calc(100vh - 5.25rem);">
+			<div style="height: calc(100% - 2rem)">
+				{% block content %}
+				{% endblock %}
+			</div>
+		<div class="content">
+			<p class="is-pulled-right" style="text-align: right;">
+				<strong>BiblioTech</strong> built by <a href="http://dytrich-nguyen">Dytrich Nguyen</a> &#169; 2020.<br/>
+				Email questions, comments, criticisms to <a href="mailto:me@dytrich-nguyen.com">me@dytrich-nguyen.com</a>.
+			</p>
+		</div>
 		</div>
 	</body>
 </html>
