--- a/bibliotech/templates/bibliotech/base.html
+++ b/bibliotech/templates/bibliotech/base.html
@@ -45,10 +45,18 @@
 				{% endblock %}
 			</div>
 		<div class="content">
-			<p class="is-pulled-right" style="text-align: right;">
-				<strong>BiblioTech</strong> built by <a href="http://dytrich-nguyen">Dytrich Nguyen</a> &#169; 2020.<br/>
-				Email questions, comments, criticisms to <a href="mailto:me@dytrich-nguyen.com">me@dytrich-nguyen.com</a>.
-			</p>
+			<div class="level">
+				<div class="level-left">
+					<div>
+						<strong>BiblioTech</strong> built by <a href="http://dytrich-nguyen">Dytrich Nguyen</a> &#169; 2020.<br/>
+					</div>
+				</div>
+				<div class="level-right">
+					<div>
+						Email questions, comments, criticisms, to <a href="mailto:me@dytrich-nguyen.com">me@dytrich-nguyen.com</a>.
+					</div>
+				</div>
+			</div>
 		</div>
 		</div>
 	</body>
