--- a/bibliotech/templates/bibliotech/checkout_list.html
+++ b/bibliotech/templates/bibliotech/checkout_list.html
@@ -1,7 +1,8 @@
 {% extends 'bibliotech/base.html' %}
 
 {% block content %}
-		<h1 class="title">Checkout History</h1>
+<h1 class="title">Checkout History</h1>
+<div style="height: calc(100% - 7rem); overflow: auto;">
 		<table class="table is-fullwidth">
 			<thead>
 				<th>Checkout Date</th>
@@ -22,4 +23,5 @@
 			{% endfor %}
 			</tbody>
 		</table>
+</div>
 {% endblock %}
