--- a/bibliotech/templates/bibliotech/master_inventory.html
+++ b/bibliotech/templates/bibliotech/master_inventory.html
@@ -1,9 +1,9 @@
 {% extends "bibliotech/base.html" %}
 
 {% block content %}
-<div class="tile is-ancestor">
+<div class="tile is-ancestor" style="height: 100%">
 	<div class="tile is-parent">
-		<div class="panel is-dark" style="width: 100%;">
+		<div class="panel is-dark" style="width: 100%; height: 100%;">
 			<div class="panel-heading">
 				Item Groups
 			</div>
