add an 'about' panel to librarian control panel for future product description features

--- a/management/templates/management/librarian_control_panel.html
+++ b/management/templates/management/librarian_control_panel.html
@@ -24,12 +24,7 @@
 							<ul>
 								<li><a href="{% url 'return-item' %}">Return an item</a></li>
 							</ul>
-							<h3>Manage Items</h3>
-							<ul>
-								<li><a href="{% url 'add-item' %}">Add a new item</a></li>
-								<li><a href="{% url 'add-holding' %}">Add a new holding</a></li>
-								<li><a href="{% url 'master-inventory' %}">Update an item</a></li>
-							</ul>
+							<a href="{% url 'master-inventory' %}">Manage Items</a>
 						</div>
 					</div>
 				</div>
