Layout for management control panel

--- a/management/templates/management/librarian_control_panel.html
+++ b/management/templates/management/librarian_control_panel.html
@@ -24,7 +24,10 @@
 							<ul>
 								<li><a href="{% url 'return-item' %}">Return an item</a></li>
 							</ul>
-							<a href="{% url 'master-inventory' %}">Manage Items</a>
+							<ul>
+								<li><a href="{% url 'master-inventory' %}">Manage Inventory</a></li>
+								<li><a>Waitlists</a></li>
+							</ul>
 						</div>
 					</div>
 				</div>
