--- a/management/templates/management/return_item.html
+++ b/management/templates/management/return_item.html
@@ -16,7 +16,9 @@
 				</a>
 				{% endfor %}
 				{% else %}
-				No active checkouts!
+				<div class="panel-block">
+					No active checkouts!
+				</div>
 				{% endif %}
 				</div>
 		</div>
