add password validation

--- a/bibliotech/templates/bibliotech/signup.html
+++ b/bibliotech/templates/bibliotech/signup.html
@@ -55,6 +55,9 @@
 
 	<div class="field">
 		<label class="label" for="password">Password</label>
+		<p class="help">
+		minimum 8 characters
+		</p>
 		<input class="input" type="password" name="password">
 		{% if form.password.errors %}
 		<ul class="help is-danger">
