Render descriptions as HTML, as they are sanitized before being stored.

--- a/bibliotech/templates/bibliotech/base.html
+++ b/bibliotech/templates/bibliotech/base.html
@@ -46,6 +46,8 @@
 				{% block content %}
 				{% endblock %}
 			</div>
+		</div>
+		<div class="footer">
 			<div class="content">
 				<div class="level">
 					<div class="level-left">
