--- a/bibliotech/templates/bibliotech/base.html
+++ b/bibliotech/templates/bibliotech/base.html
@@ -10,6 +10,8 @@
 		{% endblock %}
 	</head>
 	<body>
+		{% block modal %}
+		{% endblock %}
 		<nav class="navbar is-dark" role="navigation" aria-label="main navigation">
 			<div class="navbar-menu">
 				<div class="navbar-brand">
