add update password link to views

--- a/bibliotech/templates/bibliotech/update_password.html
+++ b/bibliotech/templates/bibliotech/update_password.html
@@ -3,7 +3,7 @@
 {% block content %}
 <form class="form" action="{% url 'user-change-password' %}" method="POST">
 	{% csrf_token %}
-	{% if user.authenticated %}
+	{% if user.is_authenticated %}
 		<input type="hidden" name="user_id" value="{{ user.id }}">
 	{% endif %}
 	<div class="field">
