--- a/bibliotech/templates/bibliotech/login.html
+++ b/bibliotech/templates/bibliotech/login.html
@@ -6,6 +6,13 @@
 	<div>
 		<form action="{% url 'login' %}" method="post">
 				{% csrf_token %}
+				{% if form.non_field_errors %}
+				<div class="notification is-danger">
+					{% for e in form.non_field_errors %}
+					<p>{{e}}</p>
+					{% endfor %}
+				</div>
+				{% endif %}
 				<div class="field">
 					<label class="label" for="username">Username</label>
 					<div class="control">
