Add edit profile form and link to user profile

--- a/bibliotech/templates/bibliotech/update_password.html
+++ b/bibliotech/templates/bibliotech/update_password.html
@@ -27,7 +27,7 @@
 	</div>
 
 	<div class="field">
-		<label for="current_pass">Conrifm Password</label>
+		<label for="current_pass">Confirm Password</label>
 		<input class="input" type="password" name="new_confirmed">
 		{% if form.new_confirmed.errors %}
 			{% for e in form.new_confirmed.errors %}
@@ -37,10 +37,10 @@
 	</div>
 
 	<div class="field is-grouped">
-		<div class="field">
+		<div class="control">
 			<input class="button is-success" type="submit" value="Change pasword">
 		</div>
-		<div class="field">
+		<div class="control">
 			<a href="{% url 'user-profile' %}" class="button is-danger is-outlined">Cancel</a>
 		</div>
 	</div>
