--- a/bibliotech/templates/bibliotech/user_profile.html
+++ b/bibliotech/templates/bibliotech/user_profile.html
@@ -3,7 +3,8 @@
 {% block content %}
 <div class="content">
 	<div>
-		<a href="{% url 'user-change-password' %}">Change Password</a>
+		<a href="{% url 'user-change-password' %}">Change Password</a> |
+		<a href="{% url 'user-profile-update' %}">Edit profile</a>
 	</div>
 	<h1>{{ profile.user.get_full_name }}</h1>
 	<p>{{ profile.user.email }}</p>
