--- a/management/templates/management/master_inventory.html
+++ b/management/templates/management/master_inventory.html
@@ -58,6 +58,9 @@
 					<a 
 						href="{% url 'master-inventory' %}?active={{active.id}}&about_view=links" 
 						{% if about_view == 'links' %}class="is-active"{% endif %}>Resources</a>
+					<a
+						href="{% url 'master-inventory' %}?active={{active.id}}&about_view=tags"
+						{% if about_view == 'tags' %}class="is-active"{% endif %}>Tags</a>
 				</div>
 				<div class="panel-block">
 					<div class="content" style="width: 100%">
@@ -85,6 +88,16 @@
 									{% else %}
 										<div>No features yet</div>
 									{% endif %}
+								{% elif about_view == 'tags' %}
+									{% if active.tags %}
+										<ul>
+										{% for t in active.tags.all %}
+											<li>{{t.name}}</li>
+										{% endfor %}
+										</ul>
+									{% else %}
+										<div>No tags yet</div>
+									{% endif %}
 								{% else %}
 									{{ active.description|safe }}
 								{% endif %}
@@ -111,7 +124,7 @@
 					Inventory	
 				</div>
 				<div class="panel-body">
-					{% if active_item_set and active %}
+					{% if active.item_set.all|length > 0 and active %}
 					<div class="panel-block" style="display: block">
 						<div class="level">
 							<div class="level-left">
@@ -140,7 +153,7 @@
 							<th>Actions</th>
 						</thead>
 						<tbody>
-						{% for item in active_item_set %}
+						{% for item in active.item_set.all %}
 						<tr>
 							<td>{{ item.library_id }}</td>
 							<td>{{ item.serial_num }}</td>
@@ -156,7 +169,7 @@
 						{% endfor %}
 						</tbody>
 					</table>
-					{% elif active and not active_item_set %}
+					{% elif active %}
 					<div>No Items belong to this ItemGroup yet.</div>
 					<a href="{% url 'add-holding' %}" class="button is-success">Add new</a>
 					{% else %}
